--- a/demo/package.json
+++ b/demo/package.json
@@ -7,8 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon run src/server.js"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Abdullah Habberih",
+  "license": "Apache-2.0",
+  "repository": {
+    "url": "https://github.com/habberrih/Olive-branch.git"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
